<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeWorkAndroid3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="title_activity_item_fragment">ItemFragment</string>
    <string name="title_activity_club_dialogue">ClubDialogue</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_player_dialogue">PlayerDialogue</string>
    <string name="title_club_dialogue">Information about club</string>
	<string name="title_player_dialogue">Information about player</string>
	<string name="txt_name_club_dlg">Name</string>
	<string name="txt_league_club_dlg">League</string>
	<string name="txt_city_club_dlg">City</string>
    <string name="txt_founded_club_dlg">Founded</string>
    <string name="txt_name_player_dlg">Name</string>
	<string name="txt_surname_player_dlg">Surname</string>
	<string name="txt_age_player_dlg">Age</string>
    <string name="txt_club_player_dlg">Club</string>
</resources>
