<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClubDialogue" 
	android:orientation="vertical" 
	android:id="@+id/club_dialog_fragment">
    <TextView 
        android:id="@+id/edit_text_dlg_club"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_club_dialogue"
        android:gravity="center_horizontal"
        />
    <RelativeLayout
        android:id="@+id/club_name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/edit_text_dlg_club">
        <TextView 
	        android:id="@+id/club_name_txt"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_name_club_dlg"
	        
	        />
        <EditText 
			android:id="@+id/club_name_dlg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below ="@+id/club_name_txt"
			android:inputType="text"
			android:text="@string/title_club_dialogue"
			android:textSize="14sp"
			
        />
		
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/club_league_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/club_name_layout"
        >
	   	<TextView 
		   android:id="@+id/club_league_txt"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:text="@string/txt_league_club_dlg"		      
	   />
	   <EditText 
	       android:id="@+id/league_dlg"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_below="@+id/club_league_txt"	       
	       android:inputType="text"
	       android:textSize="14sp"
       />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/club_city_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/club_league_layout"
        >
        
        <TextView 
	        android:id="@+id/club_city_txt"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_city_club_dlg"
	        
        />
		<EditText 
		    android:id="@+id/city_dlg"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/club_city_txt"
	        android:textSize="14sp"
	        android:inputType="text"
        />
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/club_founded_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/club_city_layout"
        >
        <TextView 
	        android:id="@+id/club_year_txt"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_founded_club_dlg"
	        
        />
		<EditText 
		    android:id="@+id/year_found_dlg"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/club_year_txt"
	        android:inputType="number"
	        
	        android:textSize="14sp"
        />
        
    </RelativeLayout>

</RelativeLayout>
