<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayerDialogue" 
	android:orientation="vertical" 
	android:id="@+id/player_dialog_fragment">
    <TextView 
        android:id="@+id/edit_text_dlg_player"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_player_dialogue"
        android:gravity="center_horizontal"
        />
    <RelativeLayout
        android:id="@+id/player_name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/edit_text_dlg_player">
        <TextView 
	        android:id="@+id/player_name_txt"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_name_player_dlg"
	        
	        />
        <EditText 
			android:id="@+id/player_name_dlg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below ="@+id/player_name_txt"
			android:inputType="text"
			android:text="@string/title_player_dialogue"
			android:textSize="14sp"
			
        />
		
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/player_surname_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_name_layout"
        >
	   	<TextView 
		   android:id="@+id/player_surname_txt"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:text="@string/txt_surname_player_dlg"		      
	   />
	   <EditText 
	       android:id="@+id/surname_dlg"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_below="@+id/player_surname_txt"	       
	       android:inputType="text"
	       android:textSize="14sp"
       />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/player_age_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/player_surname_layout"
        >
        
        <TextView 
	        android:id="@+id/player_age_txt"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_age_player_dlg"
	        
        />
		<EditText 
		    android:id="@+id/age_dlg"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/player_age_txt"
	        android:textSize="14sp"
	        android:inputType="text"
        />
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/player_club_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_age_layout"
        >
        <TextView 
	        android:id="@+id/player_club_txt"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_club_player_dlg"
	        
        />
		<EditText 
		    android:id="@+id/player_club_dlg"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/player_club_txt"
	        android:inputType="number"        
	        android:textSize="14sp"
        />
        
    </RelativeLayout>

</RelativeLayout>
